--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -86,7 +86,7 @@
     </div>
   </div>
   <main class="container flex">
-    <aside class="book-menu">
+    <aside class="book-menu sidebar">
       <div class="book-menu-content">
         {{ template "menu" . }} <!-- Left menu Content -->
       </div>
