Change h6 sizing and .goat margin

--- a/assets/_markdown.scss
+++ b/assets/_markdown.scss
@@ -53,7 +53,12 @@
   }
 
   h6 {
-    font-size: 0.75em;
+    margin-top: 28px;
+    font-size: 1.15em;
+  }
+
+  .goat {
+    margin-bottom: 20px;
   }
 
   b,
