feat: update places submenu

--- a/layouts/partials/docs/navbar.html
+++ b/layouts/partials/docs/navbar.html
@@ -45,7 +45,8 @@
           <div class="item submenu">
             <div class="ui vertical menu">
               <a href="https://places.decentraland.org" class="item">Overview</a>
-              <a href="https://places.decentraland.org/places" class="item">All Places</a>
+              <a href="https://places.decentraland.org/places" class="item">Places</a>
+              <a href="https://places.decentraland.org/worlds" class="item">Worlds</a>
               <a href="https://docs.decentraland.org/creator/places/faq" class="item">FAQ</a>
             </div>
           </div>
