add number for mobile toc, fix order for nested titles

--- a/assets/plugins/_numbered.scss
+++ b/assets/plugins/_numbered.scss
@@ -19,13 +19,12 @@ $endLevel: 6;
   }
 }
 
-.book-toc nav ul {
+.book-toc nav ul,
+#TableOfContents ul {
+  counter-reset: item;
+
   li {
     counter-increment: item;
-
-    &:first-child {
-      counter-reset: item;
-    }
 
     &:before {
       content: counters(item, ".") ". ";
