layouts/shortcodes/mermaid.html: choosing <div> for styling flexibility
Enhance styling and centering by opting for `<div>` over `<p>`. For example, utilize the class `div.mermaid` with `text-align: center;` for positioning the Mermaid.js SVG image at the center of the container.

--- a/layouts/shortcodes/mermaid.html
+++ b/layouts/shortcodes/mermaid.html
@@ -7,6 +7,6 @@
 {{ .Page.Scratch.Set "mermaid" true }}
 {{ end }}
 
-<p class="mermaid{{ with .Get "class" }} {{ . }}{{ end }}">
+<div class="mermaid{{ with .Get "class" }} {{ . }}{{ end }}">
   {{- .Inner -}}
-</p>
+</div>
