--- a/layouts/partials/docs/title.html
+++ b/layouts/partials/docs/title.html
@@ -3,7 +3,11 @@
   Accepts Page as context
 -->
 {{ $title := "" }}
+{{ $icon := "" }}
 
+{{ if .Params.Icon }}
+  {{ $icon = printf "<img src=\"%s\" class=\"book-filetree-icon\" />" .Params.Icon }}
+{{ end }}
 {{ if .LinkTitle }}
   {{ $title = .LinkTitle }}
 {{ else if .Title }}
@@ -14,4 +18,5 @@
   {{ $title = .File.BaseFileName | humanize | title }}
 {{ end }}
 
-{{ return $title }}
+{{ $out := printf "%s %s" $icon $title | safeHTML }}
+{{ return $out }}
