--- a/layouts/partials/docs/header.html
+++ b/layouts/partials/docs/header.html
@@ -3,7 +3,7 @@
     <img src="{{ "svg/menu.svg" | relURL }}" class="book-icon" alt="Menu" />
   </label>
 
-  <strong>{{ partial "docs/title" . }}</strong>
+  <strong>{{ partial "docs/title-with-icon" . }}</strong>
 
   <label for="toc-control">
     {{ if default true (default .Site.Params.BookToC .Params.BookToC) }}
