--- a/layouts/posts/list.html
+++ b/layouts/posts/list.html
@@ -2,7 +2,7 @@
   {{ range sort .Paginator.Pages }}
   <article class="markdown book-post">
     <h2>
-      <a href="{{ .RelPermalink }}">{{ partial "docs/title.html" . }}</a>
+      <a href="{{ .RelPermalink }}">{{ partial "docs/title-with-icon.html" . }}</a>
     </h2>
     {{ partial "docs/post-meta" . }}
     <p>
