--- a/layouts/shortcodes/katex.html
+++ b/layouts/shortcodes/katex.html
@@ -7,7 +7,7 @@
 {{- end -}}
 
 <span {{- with .Get "class" }} class="{{ . }}"{{ end }}>
-  {{ cond (in .Params "display") "\\[" "\\(" -}}
+  {{ with .Get "display" }}\[{{else}}\({{end}}
   {{- trim .Inner "\n" -}}
-  {{- cond (in .Params "display") "\\]" "\\)" }}
+  {{ with .Get "display" }}\]{{else}}\){{end}}
 </span>
