--- a/assets/_markdown.scss
+++ b/assets/_markdown.scss
@@ -76,6 +76,7 @@
   }
 
   pre {
+    direction: ltr;
     padding: $padding-16;
     background: var(--gray-100);
     border-radius: $border-radius;
@@ -150,6 +151,10 @@
   }
 
   // Special case for highlighted code with line numbers
+  .highlight {
+    direction: ltr;
+  }
+  
   .highlight table tr {
     td:nth-child(1) pre {
       margin: 0;
