--- a/assets/_markdown.scss
+++ b/assets/_markdown.scss
@@ -69,6 +69,8 @@
   }
 
   code {
+    direction: ltr;
+    unicode-bidi: embed;
     padding: 0 $padding-4;
     background: var(--gray-200);
     border-radius: $border-radius;
@@ -77,6 +79,7 @@
 
   pre {
     direction: ltr;
+    unicode-bidi: embed;
     padding: $padding-16;
     background: var(--gray-100);
     border-radius: $border-radius;
@@ -153,6 +156,7 @@
   // Special case for highlighted code with line numbers
   .highlight {
     direction: ltr;
+    unicode-bidi: embed;
   }
   
   .highlight table tr {
