--- a/assets/_custom.scss
+++ b/assets/_custom.scss
@@ -1,4 +1,38 @@
 /* You can add custom styles here. */
+h1 {
+  font-size: 48px;
+  font-weight: 600;
+  line-height: 56.02px;
+  text-align: left;
+}
+
+h2 {
+  font-size: 32px;
+  font-weight: 500;
+  line-height: 39.52px;
+  text-align: left;
+}
+
+h3 {
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 32.02px;
+  text-align: left;
+}
+
+h4 {
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 32px;
+  text-align: left;
+}
+
+h5 {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 28px;
+  text-align: left;
+}
 
 // @import "plugins/numbered";
 details.faq-details {
