--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -30,7 +30,7 @@
                   <img alt="{{.name}}" src="/{{.img}}" />
                 </div>
                 <div class="card-info">
-                  <h3>For {{.name}}</h3>
+                  <h3>{{.name}} Docs</h3>
                   <p>{{.description}}</p>
                 </div>
                 <div class="card-cta">
