--- a/layouts/shortcodes/tabs.html
+++ b/layouts/shortcodes/tabs.html
@@ -1,6 +1,5 @@
 {{ if .Inner }}{{ end }}
-{{ $id := .Get 0 }}
-{{ $group := printf "tabs-%s" $id }}
+{{ $group := printf "tabs-%d" .Ordinal }}
 
 <div class="book-tabs">
 {{- range $index, $tab := .Scratch.Get $group -}}
