--- a/assets/_shortcodes.scss
+++ b/assets/_shortcodes.scss
@@ -83,6 +83,7 @@
     color: var(--color-link);
     line-height: $padding-16 * 2;
     padding: 0 $padding-16;
+    margin: 0 $padding-4;
     border: $padding-1 solid var(--color-link);
     border-radius: $border-radius;
     cursor: pointer;
