Use .InnerDeindent in inline shortcodes

--- a/layouts/shortcodes/details.html
+++ b/layouts/shortcodes/details.html
@@ -2,6 +2,6 @@
   {{- $summary := cond .IsNamedParams (.Get "title") (.Get 0) -}}
   <summary>{{ $summary | .Page.RenderString }}</summary>
   <div class="markdown-inner">
-    {{ .Inner | .Page.RenderString }}
+    {{ .InnerDeindent | .Page.RenderString }}
   </div>
 </details>
