--- a/layouts/shortcodes/button.html
+++ b/layouts/shortcodes/button.html
@@ -1,12 +1,12 @@
-{{ $ref := "" }}
-{{ $target := "" }}
-{{ with .Get "href" }}
-  {{ $ref = . }}
-  {{ $target = "_blank" }}
-{{ end }}
-{{ with .Get "relref" }}
-  {{ $ref = relref $ . }}
-{{ end }}
+{{- $ref := "" }}
+{{- $target := "" -}}
+{{- with .Get "href" -}}
+  {{- $ref = . -}}
+  {{- $target = "_blank" -}}
+{{- end -}}
+{{- with .Get "relref" -}}
+  {{- $ref = relref $ . -}}
+{{- end -}}
 <a {{ with $ref }} href="{{.}}" {{ end }} {{ with $target }} target="{{.}}" rel="noopener" {{ end }} class="book-btn{{ with .Get "class" }} {{ . }}{{ end }}">
-  {{ .Inner | .Page.RenderString }}
+  {{ .InnerDeindent | .Page.RenderString }}
 </a>
