Breaking change: switch to '{{%' decorators in shortcodes to better support shortcode-in-shortcode

--- a/layouts/shortcodes/hint.html
+++ b/layouts/shortcodes/hint.html
@@ -1,3 +1,3 @@
 <blockquote class="book-hint {{ .Get 0 }}">
-  {{ .InnerDeindent | .Page.RenderString }}
+  {{ .InnerDeindent | safeHTML }}
 </blockquote>
