--- a/layouts/shortcodes/columns.html
+++ b/layouts/shortcodes/columns.html
@@ -1,7 +1,7 @@
 <div class="book-columns flex flex-wrap">
-{{ range split .Inner "<--->" }}
+{{ range split .InnerDeindent "<--->" }}
   <div class="flex-even markdown-inner">
-    {{ . | $.Page.RenderString }}
+    {{ . | safeHTML }}
   </div>
 {{ end }}
 </div>
