--- a/layouts/shortcodes/columns.html
+++ b/layouts/shortcodes/columns.html
@@ -1,7 +1,9 @@
-<div class="book-columns flex flex-wrap">
-{{ range split .InnerDeindent "<--->" }}
-  <div class="flex-even markdown-inner">
-    {{ . | safeHTML }}
+{{- $ratio := (split (.Get "ratio") ":") -}}
+<div class="book-columns flex flex-wrap{{ with .Get "class" }} {{ . }}{{ end }}">
+{{ range $index, $content := split .InnerDeindent "<--->" }}
+  {{- $grow := default 1 (index $ratio $index) -}}
+  <div class="flex-even markdown-inner" style="flex-grow: {{ $grow }};">
+    {{ $content | safeHTML }}
   </div>
 {{ end }}
 </div>
