Add Parameters for a page content license
This allows people to specify which License conditions apply for the
content they're hosting.

Signed-off-by: Christian Heusel <christian@heusel.eu>

--- a/layouts/_partials/docs/footer.html
+++ b/layouts/_partials/docs/footer.html
@@ -19,6 +19,22 @@
   </div>
 {{ end }}
 
+{{ if and .File .Site.Params.BookContentLicenseText }}
+  <div>
+    {{ if and .File .Site.Params.BookContentLicenseLink }}
+    <a class="flex align-center" href="{{ .Site.Params.BookContentLicenseLink }}" title='License' target="_blank" rel="noopener">
+      <img src="{{ "svg/license.svg" | relURL }}" class="book-icon" alt="" />
+      <span>{{ .Site.Params.BookContentLicenseText }}</span>
+    </a>
+    {{ else }}
+    <span>
+      <img src="{{ "svg/license.svg" | relURL }}" class="book-icon" alt="" />
+      {{ .Site.Params.BookContentLicenseText }}
+    </span>
+    {{ end }}
+  </div>
+{{ end }}
+
 </div>
 
 {{ $script := resources.Get "clipboard.js" | resources.Minify }}
