Adjust styles to look like existing spacing

--- a/layouts/partials/docs/languages.html
+++ b/layouts/partials/docs/languages.html
@@ -13,8 +13,8 @@
 <ul class="book-languages">
   <li>
     <input type="checkbox" id="languages" class="toggle" />
-    <label for="languages" class="flex justify-between">
-      <a role="button" class="flex align-center">
+    <label for="languages" class="flex">
+      <a role="button" class="flex flex-auto">
         <img src="{{ "svg/translate.svg" | relURL }}" class="book-icon" alt="Languages" />
         {{ $.Site.Language.LanguageName }}
       </a>
