--- a/layouts/_partials/docs/taxonomy.html
+++ b/layouts/_partials/docs/taxonomy.html
@@ -3,7 +3,7 @@
   {{ range $term, $_ := .Site.Taxonomies }}
     {{ with $.Site.GetPage (printf "/%s" $term | urlize) }}
     <li class="book-section-flat">
-      <strong>{{ .Title | title }}</strong>
+      <span>{{ .Title | title }}</span>
       <ul>
       {{ range .Pages }}
         <li class="flex justify-between">
