Add a gap between footer items

--- a/layouts/_partials/docs/footer.html
+++ b/layouts/_partials/docs/footer.html
@@ -1,4 +1,4 @@
-<div class="flex flex-wrap justify-between">
+<div class="flex flex-wrap flex-gap justify-between">
 
 {{ if and .GitInfo .Site.Params.BookRepo }}
   <div>
