Added support for ```mermaid

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -81,3 +81,9 @@
 {{ define "toc" }}
   {{ partial "docs/toc" . }}
 {{ end }}
+{{ if .Store.Get "hasMermaid" }}
+  <script type="module">
+    import mermaid from 'mermaid.min.js';
+    mermaid.initialize({ startOnLoad: true });
+  </script>
+{{ end }}
