--- a/layouts/_partials/docs/prev-next.html
+++ b/layouts/_partials/docs/prev-next.html
@@ -10,18 +10,22 @@
 
   {{- if or $prev $next }}
   <div class="flex flex-wrap justify-between">
+    <span>
     {{ with $prev }}
-      <a href="{{ .RelPermalink }}" class="flex align-center float-left book-icon">
+      <a href="{{ .RelPermalink }}" class="flex align-center book-icon">
         <img src="{{ "svg/backward.svg" | relURL }}" alt="Previous" title="{{ partial "docs/title" . }}" />
         <span>{{ partial "docs/title" . }}</span>
       </a>
     {{ end }}
+    </span>
+    <span>
     {{ with $next }}
-      <a href="{{ .RelPermalink }}" class="flex align-center float-right book-icon">
+      <a href="{{ .RelPermalink }}" class="flex align-center book-icon">
         <span>{{ partial "docs/title" . }}</span>
         <img src="{{ "svg/forward.svg" | relURL }}" alt="Next" title="{{ partial "docs/title" . }}" />
       </a>
     {{ end }}
+    </span>
   </div>
   {{ end -}}
 {{ end }}
