--- a/assets/_main.scss
+++ b/assets/_main.scss
@@ -89,7 +89,13 @@ ul.pagination {
 a .book-icon {
   height: 1em;
   width: 1em;
-  margin-inline-end: .5em;
+
+  &:first-child {
+    margin-inline-end: $padding-8;
+  }
+  &:last-child {
+    margin-inline-start: $padding-8;
+  }
 }
 
 .book-brand {
@@ -279,6 +285,10 @@ body[dir="rtl"] .book-menu {
 .book-footer {
   padding-top: $padding-16;
   font-size: $font-size-14;
+
+  a {
+    margin: $padding-8 0;
+  }
 }
 
 .book-comments {
@@ -287,6 +297,10 @@ body[dir="rtl"] .book-menu {
 
 .book-languages {
   margin-bottom: $padding-16;
+
+  span {
+    padding: 0;
+  }
 
   ul {
     padding-inline-start: 1.5em;
