--- a/layouts/_default/_markup/render-codeblock-mermaid.html
+++ b/layouts/_default/_markup/render-codeblock-mermaid.html
@@ -1,4 +1,12 @@
+{{ if not (.Page.Store.Get "mermaid") }}
+<!-- Include mermaid only first time -->
+<script src="{{ "mermaid.min.js" | relURL }}"></script>
+{{ with resources.Get "mermaid.json" }}
+  <script>mermaid.initialize({{ .Content | safeJS }})</script>
+{{ end }}
+{{ .Page.Store.Set "mermaid" true }}
+{{ end }}
+
 <pre class="mermaid">
-  {{ .Inner | htmlEscape | safeHTML }}
+  {{- .Inner -}}
 </pre>
-{{ .Page.Store.Set "hasMermaid" true }}
