--- a/assets/_markdown.scss
+++ b/assets/_markdown.scss
@@ -186,10 +186,22 @@
       padding: $padding-16;
       margin: -$padding-16;
       cursor: pointer;
+      list-style: none;
+
+      &::before {
+        content: "▸"; 
+        display: inline-block;
+        margin-inline-end: $padding-8;
+        transition: transform 0.1s ease-in-out;
+      }
     }
 
     &[open] summary {
       margin-bottom: 0;
+
+      &::before {
+        transform: rotate(90deg);
+      }
     }
   }
 
