Breaking Change: replace BookEditPath with BookLastChangeLink and BookEditLink tempaltes

--- a/layouts/_partials/docs/links/commit.html
+++ b/layouts/_partials/docs/links/commit.html
@@ -1,2 +1,5 @@
-{{- $commitPath := default "commit" .Site.Params.BookCommitPath -}}
-{{- .Site.Params.BookRepo }}/{{ $commitPath }}/{{ .GitInfo.Hash -}}
+{{- return partial "docs/text/template" (dict "Template" .Site.Params.BookLastChangeLink "Context" (dict
+  "Site" .Site
+  "Page" .Page
+  "GitInfo" .GitInfo
+)) -}}
