--- a/layouts/_shortcodes/hint.html
+++ b/layouts/_shortcodes/hint.html
@@ -1,3 +1,3 @@
-<blockquote class="book-hint {{ .Get 0 }}">
+<blockquote class="book-hint {{ default "default" (.Get 0) }}">
   {{ .Inner | safeHTML }}
 </blockquote>
