Make sure that edit and commit URls are clean

--- a/layouts/_partials/docs/links/commit.html
+++ b/layouts/_partials/docs/links/commit.html
@@ -1,5 +1,5 @@
-{{- return partial "docs/text/template" (dict "Template" .Site.Params.BookLastChangeLink "Context" (dict
+{{- return (partial "docs/text/template" (dict "Template" .Site.Params.BookLastChangeLink "Context" (dict
   "Site" .Site
   "Page" .Page
   "GitInfo" .GitInfo
-)) -}}
+)) | path.Clean) -}}
