--- a/assets/_defaults.scss
+++ b/assets/_defaults.scss
@@ -27,6 +27,11 @@ $hint-colors: (
   success: #3bad3b,
   warning: #f59e42,
   danger: #d84747,
+
+  note: #64748b,
+  tip: #3bad3b,
+  important: #4486dd,
+  caution: #d84747
 ) !default;
 
 // Themes
